// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card does not error check malformed link 1`] = `
<div
  aria-label="card 1"
  className="card twoColumn"
  data-testid="card"
  id="card-4-1"
  tabIndex="0"
>
  <a
    onClick={[Function]}
    style={Object {}}
    target="_self"
  >
    <img
      alt="kitten"
      className="itemImage"
      data-testid="card image"
      id="image-4-0"
      src="https://placekitten.com/588/364"
    />
  </a>
  <div
    className="content-with-image"
  >
    <h4
      className="itemTitle"
      data-testid="card title"
      id="title-4-1"
    >
      <a
        onClick={[Function]}
        style={Object {}}
        target="_self"
      >
        Kitten
      </a>
    </h4>
    <div>
      <div
        className="dashContainer"
      >
        <hr
          className="dash dash"
          id="hr-4-0"
          style={
            Object {
              "width": "30px",
            }
          }
        />
      </div>
      <p
        className="itemSubTitle"
        data-testid="card subtitle text"
        id="subtitle-text-4-0"
        tabIndex="0"
      >
        A kitten, also known as a kitty or kitty cat, is a juvenile cat
        <a
          onClick={[Function]}
          style={Object {}}
          target="_self"
        >
          <i
            className="fa fa-chevron-right"
          />
        </a>
      </p>
    </div>
    <a
      data-testid="card link"
      onClick={[Function]}
      style={Object {}}
      target="_self"
    >
      dogs
    </a>
  </div>
</div>
`;

exports[`Card should render the spanish version correctly if the link is just a string 1`] = `
<div
  aria-label="card 1"
  className="card twoColumn"
  data-testid="card"
  id="card-4-1"
  tabIndex="0"
>
  <a
    onClick={[Function]}
    style={Object {}}
    target="_self"
  >
    <img
      alt="kitten"
      className="itemImage"
      data-testid="card image"
      id="image-4-0"
      src="https://placekitten.com/588/364"
    />
  </a>
  <div
    className="content-with-image"
  >
    <h4
      className="itemTitle"
      data-testid="card title"
      id="title-4-1"
    >
      <a
        onClick={[Function]}
        style={Object {}}
        target="_self"
      >
        Kitten
      </a>
    </h4>
    <div>
      <div
        className="dashContainer"
      >
        <hr
          className="dash dash"
          id="hr-4-0"
          style={
            Object {
              "width": "30px",
            }
          }
        />
      </div>
      <p
        className="itemSubTitle"
        data-testid="card subtitle text"
        id="subtitle-text-4-0"
        tabIndex="0"
      >
        A kitten, also known as a kitty or kitty cat, is a juvenile cat
        <a
          onClick={[Function]}
          style={Object {}}
          target="_self"
        >
          <i
            className="fa fa-chevron-right"
          />
        </a>
      </p>
    </div>
    <a
      data-testid="card link"
      onClick={[Function]}
      style={Object {}}
      target="_self"
    >
      Más información
    </a>
  </div>
</div>
`;

exports[`Card to render correctly 1`] = `
<div
  aria-label="card 1"
  className="card twoColumn"
  data-testid="card"
  id="card-4-1"
  tabIndex="0"
>
  <a
    href="https://en.wikipedia.org/wiki/Kitten"
  >
    <img
      alt="kitten"
      className="itemImage"
      data-testid="card image"
      id="image-4-0"
      src="https://placekitten.com/588/364"
    />
  </a>
  <div
    className="content-with-image"
  >
    <h4
      className="itemTitle"
      data-testid="card title"
      id="title-4-1"
    >
      <a
        href="https://en.wikipedia.org/wiki/Kitten"
      >
        Kitten
      </a>
    </h4>
    <div>
      <div
        className="dashContainer"
      >
        <hr
          className="dash dash"
          id="hr-4-0"
          style={
            Object {
              "width": "30px",
            }
          }
        />
      </div>
      <p
        className="itemSubTitle"
        data-testid="card subtitle text"
        id="subtitle-text-4-0"
        tabIndex="0"
      >
        A kitten, also known as a kitty or kitty cat, is a juvenile cat
        <a
          href="https://en.wikipedia.org/wiki/Kitten"
        >
          <i
            className="fa fa-chevron-right"
          />
        </a>
      </p>
    </div>
    <a
      data-testid="card link"
      href="https://en.wikipedia.org/wiki/Kitten"
    >
      Learn more about kittens
    </a>
  </div>
</div>
`;

exports[`Card to render correctly if the link is just a string 1`] = `
<div
  aria-label="card 1"
  className="card twoColumn"
  data-testid="card"
  id="card-4-1"
  tabIndex="0"
>
  <a
    onClick={[Function]}
    style={Object {}}
    target="_self"
  >
    <img
      alt="kitten"
      className="itemImage"
      data-testid="card image"
      id="image-4-0"
      src="https://placekitten.com/588/364"
    />
  </a>
  <div
    className="content-with-image"
  >
    <h4
      className="itemTitle"
      data-testid="card title"
      id="title-4-1"
    >
      <a
        onClick={[Function]}
        style={Object {}}
        target="_self"
      >
        Kitten
      </a>
    </h4>
    <div>
      <div
        className="dashContainer"
      >
        <hr
          className="dash dash"
          id="hr-4-0"
          style={
            Object {
              "width": "30px",
            }
          }
        />
      </div>
      <p
        className="itemSubTitle"
        data-testid="card subtitle text"
        id="subtitle-text-4-0"
        tabIndex="0"
      >
        A kitten, also known as a kitty or kitty cat, is a juvenile cat
        <a
          onClick={[Function]}
          style={Object {}}
          target="_self"
        >
          <i
            className="fa fa-chevron-right"
          />
        </a>
      </p>
    </div>
    <a
      data-testid="card link"
      onClick={[Function]}
      style={Object {}}
      target="_self"
    >
      Learn more
    </a>
  </div>
</div>
`;

exports[`Card to render correctly with null link 1`] = `
<div
  aria-label="card 1"
  className="card twoColumn"
  data-testid="card"
  id="card-4-1"
  tabIndex="0"
>
  <img
    alt="kitten"
    className="itemImage"
    data-testid="card image"
    id="image-4-0"
    src="https://placekitten.com/588/364"
  />
  <div
    className="content-with-image"
  >
    <h4
      className="itemTitle"
      data-testid="card title"
      id="title-4-1"
    >
      Kitten
    </h4>
    <div>
      <div
        className="dashContainer"
      >
        <hr
          className="dash dash"
          id="hr-4-0"
          style={
            Object {
              "width": "30px",
            }
          }
        />
      </div>
      <p
        className="itemSubTitle"
        data-testid="card subtitle text"
        id="subtitle-text-4-0"
        tabIndex="0"
      >
        A kitten, also known as a kitty or kitty cat, is a juvenile cat
        
      </p>
    </div>
  </div>
</div>
`;
